# silvergrain

./: .editorconfig  .gitattributes  .gitignore  README.md  example_usage.py  film_grain_renderer.py  film_grain_renderer_v2.py  pyproject.toml  ruff.toml  silvergrain.py
.github/workflows/: on-demand-publish.yml  on-push-validation.yml  on-release-build.yml  release-build.yml
examples/: example_01_basic_grain.py  example_02_fine_grain.py  example_03_heavy_grain.py  example_04_luminance_mode.py  example_05_rgb_mode.py  example_06_blended_strength.py  example_07_gpu_accelerated.py  example_usage.py
src/silvergrain/: __init__.py  batch.py  cli-augment.py  cli.py  cli_augment.py  cli_batch.py  cli_image.py  file_tools.py  film_grain_renderer_gpu.py  image_processing.py  renderer.py  renderer_cpu.py  renderer_gpu.py
src/silvergrain/tools/: __init__.py  file_tools.py  image_tools.py  print_tools.py
tests/: test_01_gpu_capability.py  test_02_cuda_rng.py  test_03_single_pixel_match.py  test_03b_debug_kernel.py  test_03c_rng_only.py  test_03d_poisson_test.py  test_03e_kernel_poisson.py  test_04_small_image_match.py  test_05_benchmark.py
