[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silvergrain"
version = "0.5.0"
description = "Physically-based film grain rendering with GPU acceleration"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "kjerk@github"}
]
keywords = ["film-grain", "image-processing", "gpu", "monte-carlo", "photography", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "natsort>=8.4.0",
    "numba==0.62.1",
    "numpy>=2.2.6",
    "opencv-python",
    "Pillow>=10.0.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
gpu = [
    "numba-cuda[cu12]==0.20.1",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]

[project.scripts]
silvergrain = "silvergrain.cli_image:main"
silvergrain-batch = "silvergrain.cli_batch:main"
silvergrain-augment = "silvergrain.cli_augment:main"

[project.urls]
Homepage = "https://github.com/kjerk/silvergrain"
Repository = "https://github.com/kjerk/silvergrain"
Issues = "https://github.com/kjerk/silvergrain/issues"
Changelog = "https://github.com/kjerk/silvergrain/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["silvergrain*"]
